--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Covid19 Genomes</title>
+<title>Covid19 Beacon</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet" />
@@ -26,7 +26,7 @@
 <div id="header-wrapper">
 	<div id="header" class="container">
 		<div id="logo">
-			<h1><a href="#">Covid Beacon</a></h1>
+			<h1><a href="#">Covid19 Beacon</a></h1>
 		</div>
 		<div id="menu"> <!--#unlock these comments to add menu items.-->
 			<ul>
