--- a/modules/website/files/index.html
+++ b/modules/website/files/index.html
@@ -1,10 +1,27 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="refresh" content="300" >
+<!-- Primary Meta Tags -->
 <title>Covid19 Beacon</title>
-<meta name="keywords" content="" />
-<meta name="description" content="" />
+<meta name="title" content="Covid19 Beacon">
+<meta name="description" content="Affordable and rapid genomic data exchange for COVID19 cohorts">
 
-<meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src 'self' *.execute-api.ap-southeast-2.amazonaws.com ;  font-src 'self'; img-src 'self'; object-src 'self'; script-src 'self' ; style-src 'self' 'unsafe-inline' ">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="http://covid19.genomes.in/">
+<meta property="og:title" content="Covid19 Beacon">
+<meta property="og:description" content="Affordable and rapid genomic data exchange for COVID19 cohorts">
+<meta property="og:image" content="https://covid19-beacon-website20200501014155821700000001.s3-ap-southeast-2.amazonaws.com/images/CovidBeacon.png">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="http://covid19.genomes.in/">
+<meta property="twitter:title" content="Covid19 Beacon">
+<meta property="twitter:description" content="Affordable and rapid genomic data exchange for COVID19 cohorts">
+<meta property="twitter:image" content="https://covid19-beacon-website20200501014155821700000001.s3-ap-southeast-2.amazonaws.com/images/CovidBeacon.png">
+
+<!--<meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src 'self' *.execute-api.ap-southeast-2.amazonaws.com ;  font-src 'self'; img-src 'self'; object-src 'self'; script-src 'self' ; style-src 'self' 'unsafe-inline' ">-->
 
 <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
 <link href="assets/css/angular-material.min.css" rel="stylesheet" type="text/css" media="all" />
