sort, search, tooltip and popular search

--- a/modules/website/files/index.html
+++ b/modules/website/files/index.html
@@ -25,7 +25,7 @@
 <meta property="twitter:image" content="https://covid19-beacon-website20200501014155821700000001.s3-ap-southeast-2.amazonaws.com/images/CovidBeacon.png">
 
 <!--<meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src 'self' *.execute-api.ap-southeast-2.amazonaws.com ;  font-src 'self'; img-src 'self'; object-src 'self'; script-src 'self' ; style-src 'self' 'unsafe-inline' ">-->
-
+<link href="assets/css/font-awesome.min.css" rel="stylesheet" type="text/css" media="all" />
 <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
 <link href="assets/css/angular-material.min.css" rel="stylesheet" type="text/css" media="all" />
 <link href="assets/css/default.css" rel="stylesheet" type="text/css" media="all" />
