--- a/modules/website/files/index.html
+++ b/modules/website/files/index.html
@@ -40,6 +40,7 @@
 <!--<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.12/angular-material.min.js" nonce="2687258487"></script>-->
 <script type="text/javascript" src="assets/js/config.js"></script>
 <script type="text/javascript" src="assets/js/core.js"></script>
+<script type="text/javascript" src="assets/js/dirPagination.js"></script>
 </head>
 
 <body ng-app="covidBeacon" >
