--- a/modules/website/files/index.html
+++ b/modules/website/files/index.html
@@ -37,8 +37,14 @@
 <script type="text/javascript" src="assets/js/angular-messages.min.js"></script>
 <script type="text/javascript" src="assets/js/angular-route.js"></script>
 <script type="text/javascript" src="assets/js/angular-material.min.js" ></script>
+<script type="text/javascript" src="assets/js/d3.v4.min.js" ></script>
+<script type="text/javascript" src="assets/js/d3-scale-chromatic.v1.min.js" ></script>
+<script type="text/javascript" src="assets/js/d3-geo-projection.v2.min.js" ></script>
+<script type="text/javascript" src="assets/js/d3-legend.js" ></script>
+<script type="text/javascript" src="assets/js/d3.tip.js" ></script>
 <!--<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.12/angular-material.min.js" nonce="2687258487"></script>-->
 <script type="text/javascript" src="assets/js/config.js"></script>
+<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="assets/js/core.js"></script>
 <script type="text/javascript" src="assets/js/dirPagination.js"></script>
 </head>
