--- a/modules/website/beaconApp/src/index.html
+++ b/modules/website/beaconApp/src/index.html
@@ -6,9 +6,12 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="assets/css/fonts/fonts.css" rel="stylesheet">
+  <link href="assets/css/fonts/icons.css" rel="stylesheet">
 
   <link href="assets/css/okta-sign-in.min.css" type="text/css" rel="stylesheet"/>
   <link href="assets/css/okta-theme.css" type="text/css" rel="stylesheet"/>
+  <link href="assets/css/bootstrap.css" type="text/css" rel="stylesheet"/>
 
 </head>
 <body>
