FEAT: webpage consistency from Prod

--- a/modules/website/beaconApp/src/index.html
+++ b/modules/website/beaconApp/src/index.html
@@ -9,6 +9,8 @@
   <link href="assets/css/fonts/fonts.css" rel="stylesheet">
   <link href="assets/css/fonts/icons.css" rel="stylesheet">
 
+  <!--<link href="https://global.oktacdn.com/okta-signin-widget/5.1.0/css/okta-sign-in.min.css" type="text/css" rel="stylesheet"/>
+  +  <link href="https://global.oktacdn.com/okta-signin-widget/5.1.0/css/okta-theme.css" type="text/css" rel="stylesheet"/>-->
   <link href="assets/css/okta-sign-in.min.css" type="text/css" rel="stylesheet"/>
   <link href="assets/css/okta-theme.css" type="text/css" rel="stylesheet"/>
   <link href="assets/css/bootstrap.css" type="text/css" rel="stylesheet"/>
